Add heading, logo and menu

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
 <body>
     <div class="container">
-
         <div class="header">
-
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <div class="links">
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>item 3</li>
+                </ul>
+            </div>
         </div>
         <div class="hero">
 
@@ -31,7 +39,6 @@
     <div class="signup">
 
     </div>
-    
     <div class="footer">
 
     </div>
