Re create Create layout

--- a/index.html
+++ b/index.html
@@ -9,38 +9,34 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="header-hero">
         <div class="header">
             <div class="header-logo">
                 Header Logo
             </div>
-            <div class="links">
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>item 3</li>
-                </ul>
+            <div class="nav">
+                Navigation
             </div>
         </div>
         <div class="hero">
-
+            Hero
         </div>
 
     </div>
 
     <div class="info">
-
+        Info
     </div>
 
     <div class="quote">
-
+        Quote
     </div>
 
-    <div class="signup">
-
+    <div class="call2act">
+        Call to action
     </div>
     <div class="footer">
-
+        Footer
     </div>
 </body>
 
