--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
                 Header Logo
             </div>
             <div class="nav">
-                Navigation
+                <ul>
+                    <li>Header link one</li>
+                    <li>Header link two</li>
+                    <li>Header link three</li>
+                </ul>
             </div>
         </div>
         <div class="hero">
-            Hero
+            <div class="hero-text">
+                <h1>This website is awsome</h1>
+                <p>
+                    This website has some subtext that goes here under the main title. Its a smaller font and the color is
+                    lower contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-picture">
+                This is a placeholder for an image
+
+            </div>
+
         </div>
 
     </div>
