Edit hero text and buttons

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </div>
         </div>
         <div class="hero">
-            <div class="hero-text">
-                <h1>This website is awsome</h1>
-                <p>
+            <div class="hero-left">
+                <p class="hero-main">This website is awsome</p>
+                <p class="hero-second">
                     This website has some subtext that goes here under the main title. Its a smaller font and the color is
                     lower contrast
                 </p>
-                <button>Sign up</button>
+                <button class="signup-btn">Sign up</button>
             </div>
-            <div class="hero-picture">
+            <div class="hero-right">
                 This is a placeholder for an image
 
             </div>
