--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="hero-left">
                 <p class="hero-main">This website is awsome</p>
                 <p class="hero-second">
-                    This website has some subtext that goes here under the main title. Its a smaller font and the color is
+                    This website has some subtext that goes here under the main title. Its a smaller font and the color
+                    is
                     lower contrast
                 </p>
                 <button class="signup-btn">Sign up</button>
@@ -41,7 +42,27 @@
     </div>
 
     <div class="info">
-        Info
+
+        <p class="info-header">Some random information.</p>
+        <div class="info-section">
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="info-text">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="info-text">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="info-text">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="info-text">This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        
     </div>
 
     <div class="quote">
