--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
                 <p class="info-text">This is some subtext under an illustration or image</p>
             </div>
         </div>
-        
+
     </div>
 
-    <div class="quote">
-        Quote
+    <div class="quote-section">
+        <p class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people
+            will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="author">-Thor, God of Thunder</p>
     </div>
 
     <div class="call2act">
