--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Landing-Page</title>
 </head>
@@ -74,8 +75,16 @@
         <p class="author">-Thor, God of Thunder</p>
     </div>
 
-    <div class="call2act">
-        Call to action
+    <div class="call2act-section">
+        <div class="call2act">
+            
+            <div class="call2act-textsection">
+                <p class="call2act-header">Call to action! It's time!</p>
+                <p class="call2act-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            
+            <button class="signup-btn2">Sign up</button>
+        </div>
     </div>
     <div class="footer">
         Footer
