Finnish full page layout
Now there is just some refinement left

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="footer">
-        Footer
+        Copyright © The Odin Project 2021
     </div>
 </body>
 
