--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 
 <body>
+    <div class="hero">Hero</div>
+    <div class="information">Information</div>
+    <div class="quote">Quote</div>
+    <div class="call2Action">Call2Action</div>
+    <div class="footer">Footer</div>
+
+</body>
+
+</html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Landing-Page</title>
+</head>
+
+<body>
     <div class="header-hero">
         <div class="header">
             <div class="header-logo">
@@ -91,4 +112,4 @@
     </div>
 </body>
 
-</html>
+</html> -->
