--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="hero">Hero</div>
     <div class="information">Information</div>
     <div class="quote">Quote</div>
-    <div class="call2Action">Call2Action</div>
+    <div class="call2action">Call2Action</div>
     <div class="footer">Footer</div>
 
 </body>
