Add header elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <div class="hero">Hero</div>
+    <div class="hero">
+        <div class="header">
+            Header
+        </div>
+        Hero
+    </div>
     <div class="information">Information</div>
     <div class="quote">Quote</div>
     <div class="call2action">Call2Action</div>
