Add hero section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <div class="hero">
         <div class="header">
-            Header
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li>Header Link 1</li>
+                    <li>Header Link 2</li>
+                    <li>Header Link 3</li>
+                </ul>
+            </div>
         </div>
         Hero
     </div>
