Rename hero section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="hero">
+    <div class="hero-header-section">
         <div class="header">
             <div class="logo">Header Logo</div>
             <div class="links">
@@ -21,7 +21,11 @@
                 </ul>
             </div>
         </div>
-        Hero
+
+        <div class="hero">
+            Hero
+        </div>
+        
     </div>
     <div class="information">Information</div>
     <div class="quote">Quote</div>
