Add elements for hero

--- a/index.html
+++ b/index.html
@@ -23,9 +23,18 @@
         </div>
 
         <div class="hero">
-            Hero
+            <h1>This website is awsome</h1>
+            <p class="hero-second">
+                This website has some subtext that goes here under the main title. Its a smaller font and the color
+                is
+                lower contrast
+            </p>
+            <div class="image-placeholder">
+                image
+            </div>
+            
         </div>
-        
+
     </div>
     <div class="information">Information</div>
     <div class="quote">Quote</div>
