--- a/index.html
+++ b/index.html
@@ -23,16 +23,20 @@
         </div>
 
         <div class="hero">
-            <h1>This website is awsome</h1>
-            <p class="hero-second">
-                This website has some subtext that goes here under the main title. Its a smaller font and the color
-                is
-                lower contrast
-            </p>
-            <div class="image-placeholder">
-                image
+            <div class="hero-text">
+                <h1 class="hero-header">This website is awsome</h1>
+                <p class="hero-paragraph">
+                    This website has some subtext that goes here under the main title. Its a smaller font and the color is
+                    lower contrast
+                </p>
+                <button class="signup-btn">
+                    Sign up
+                </button>
             </div>
-            
+            <div class="image-placeholder">
+                This is a placeholder for an image
+            </div>
+
         </div>
 
     </div>
